--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.JCSLibrary.jar=lib/JCSLibrary.jar
+file.reference.json-lib-2.4-jdk15.jar=lib/json-lib-2.4-jdk15.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.JCSLibrary.jar}
+    ${file.reference.JCSLibrary.jar}:\
+    ${file.reference.json-lib-2.4-jdk15.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
