--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,13 +27,23 @@ dist.jar=${dist.dir}/Epark.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-beanutils-1.8.0.jar=lib/commons-beanutils-1.8.0.jar
+file.reference.commons-collections-3.2.1.jar=lib/commons-collections-3.2.1.jar
+file.reference.commons-lang-2.5.jar=lib/commons-lang-2.5.jar
+file.reference.commons-logging-1.1.jar=lib/commons-logging-1.1.jar
+file.reference.ezmorph-1.0.6.jar=lib/ezmorph-1.0.6.jar
 file.reference.JCSLibrary.jar=lib/JCSLibrary.jar
 file.reference.json-lib-2.4-jdk15.jar=lib/json-lib-2.4-jdk15.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.JCSLibrary.jar}:\
-    ${file.reference.json-lib-2.4-jdk15.jar}
+    ${file.reference.json-lib-2.4-jdk15.jar}:\
+    ${file.reference.commons-beanutils-1.8.0.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-lang-2.5.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.ezmorph-1.0.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
