--- a/config/config.properties
+++ b/config/config.properties
@@ -1,7 +1,7 @@
 #Thu Oct 10 09:01:27 EET 2013
 rfid_readers=192.168.25.203;192.168.25.111
 db_host=127.0.0.1
-db_uname=park
-db_password=p@rk
+db_uname=root
+db_password=239aik*b
 db_port=3306
 db_base=epark_db
