--- a/config/config.properties
+++ b/config/config.properties
@@ -1,5 +1,5 @@
 #Thu Oct 10 09:01:27 EET 2013
-rfid_readers_in=147.27.11.111;
+rfid_readers_in=192.168.1.10;
 rfid_readers_out=147.27.11.222
 db_host=127.0.0.1
 db_uname=root
@@ -7,3 +7,4 @@ db_password=239aik*b
 db_port=3306
 db_base=epark_db
 serial_port=COM13
+parking_name=PK001
