--- a/config/config.properties
+++ b/config/config.properties
@@ -1,6 +1,6 @@
 #Thu Oct 10 09:01:27 EET 2013
-rfid_readers_in=192.168.1.10;
-rfid_readers_out=147.27.11.222
+rfid_readers_in=192.168.25.180;
+rfid_readers_out=192.168.25.181;
 db_host=127.0.0.1
 db_uname=root
 db_password=239aik*b
