Added documentation for http_json package

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -59,15 +59,16 @@ javac.test.classpath=\
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
-javadoc.author=false
+javadoc.author=true
 javadoc.encoding=${source.encoding}
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
-javadoc.private=false
+javadoc.private=true
+javadoc.reference.json-lib-2.4-jdk15.jar=http://json-lib.sourceforge.net/apidocs/jdk15/
 javadoc.splitindex=true
 javadoc.use=true
-javadoc.version=false
+javadoc.version=true
 javadoc.windowtitle=
 jnlp.codebase.type=no.codebase
 jnlp.descriptor=application
